working BE without docker testing